// ============================================
// SafeOne (세이프원) - Database Schema
// 안전업체 ↔ 안전요원 매칭 플랫폼
// ============================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================
// 1. 사용자 (User) - 공통 인증
// ============================================

enum UserRole {
  OFFICER   // 안전요원
  COMPANY   // 안전업체
  ADMIN     // 관리자
}

enum UserStatus {
  ACTIVE      // 활성
  SUSPENDED   // 정지
  WITHDRAWN   // 탈퇴
}

model User {
  id            String      @id @default(cuid())
  email         String      @unique
  password      String
  role          UserRole
  status        UserStatus  @default(ACTIVE)
  
  phone         String?     @unique
  phoneVerified Boolean     @default(false)
  
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
  lastLoginAt   DateTime?
  
  company       Company?
  officer       SafetyOfficer?
  
  @@index([email])
  @@index([role])
}

// ============================================
// 2. 안전업체 (Company)
// ============================================

enum SubscriptionTier {
  BRONZE
  SILVER
  GOLD
}

enum CompanyStatus {
  PENDING
  VERIFIED
  SUSPENDED
}

model Company {
  id                  String          @id @default(cuid())
  userId              String          @unique
  user                User            @relation(fields: [userId], references: [id])
  
  companyName         String
  representativeName  String
  
  businessNumber      String          @unique
  openDate            DateTime
  verifiedAt          DateTime?
  status              CompanyStatus   @default(PENDING)
  
  contactPhone        String?
  contactEmail        String?
  address             String?
  
  createdAt           DateTime        @default(now())
  updatedAt           DateTime        @updatedAt
  
  subscriptions       Subscription[]
  jobPostings         JobPosting[]
  reviewsGiven        Review[]        @relation("CompanyReviews")
  reviewsReceived     Review[]        @relation("ReviewsForCompany")
  settlements         Settlement[]
  
  @@index([businessNumber])
  @@index([status])
}

// ============================================
// 3. 구독 (Subscription)
// ============================================

enum SubscriptionStatus {
  TRIAL
  ACTIVE
  EXPIRED
  CANCELLED
}

model Subscription {
  id              String              @id @default(cuid())
  companyId       String
  company         Company             @relation(fields: [companyId], references: [id])
  
  tier            SubscriptionTier    @default(SILVER)
  status          SubscriptionStatus  @default(TRIAL)
  
  startDate       DateTime            @default(now())
  endDate         DateTime
  
  matchCountUsed  Int                 @default(0)
  matchCountLimit Int
  
  amount          Int?
  paidAt          DateTime?
  
  createdAt       DateTime            @default(now())
  updatedAt       DateTime            @updatedAt
  
  @@index([companyId])
  @@index([status])
}

// ============================================
// 4. 안전요원 (SafetyOfficer)
// ============================================

enum OfficerStatus {
  PENDING
  VERIFIED
  SUSPENDED
  RESTRICTED
}

enum Gender {
  MALE
  FEMALE
  OTHER
}

model SafetyOfficer {
  id                String          @id @default(cuid())
  userId            String          @unique
  user              User            @relation(fields: [userId], references: [id])
  
  name              String
  birthDate         DateTime?
  gender            Gender?
  profileImage      String?
  
  preferredRegions  String[]
  
  certificateNumber String?
  certificateDate   DateTime?
  certificateImage  String?
  certificateExpiry DateTime?
  
  status            OfficerStatus   @default(PENDING)
  verifiedAt        DateTime?
  
  warningCount      Int             @default(0)
  cancelCount       Int             @default(0)
  noShowCount       Int             @default(0)
  restrictedUntil   DateTime?
  
  introduction      String?
  
  createdAt         DateTime        @default(now())
  updatedAt         DateTime        @updatedAt
  
  applications      Application[]
  reviewsGiven      Review[]        @relation("OfficerReviews")
  reviewsReceived   Review[]        @relation("ReviewsForOfficer")
  settlements       Settlement[]
  
  @@index([status])
}

// ============================================
// 5. 구인공고 (JobPosting)
// ============================================

enum JobPostingStatus {
  DRAFT
  OPEN
  CLOSED
  COMPLETED
  CANCELLED
}

model JobPosting {
  id              String            @id @default(cuid())
  companyId       String
  company         Company           @relation(fields: [companyId], references: [id])
  
  title           String
  description     String?
  
  eventStartDate  DateTime
  eventEndDate    DateTime
  
  gatheringPlace  String
  destination     String
  
  studentCount    Int
  recruitCount    Int
  
  dailyWage       Int
  provideMeals    Boolean           @default(true)
  preferences     String?
  
  status          JobPostingStatus  @default(OPEN)
  isUrgent        Boolean           @default(false)
  
  applicationDeadline DateTime?
  closedAt        DateTime?
  
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  
  applications    Application[]
  settlements     Settlement[]
  
  @@index([companyId])
  @@index([status])
  @@index([eventStartDate])
  @@index([destination])
}

// ============================================
// 6. 지원 (Application)
// ============================================

enum ApplicationStatus {
  APPLIED
  SELECTED
  WAITING
  REJECTED
  CANCELLED
}

model Application {
  id              String              @id @default(cuid())
  jobPostingId    String
  jobPosting      JobPosting          @relation(fields: [jobPostingId], references: [id])
  officerId       String
  officer         SafetyOfficer       @relation(fields: [officerId], references: [id])
  
  status          ApplicationStatus   @default(APPLIED)
  appliedAt       DateTime            @default(now())
  
  selectedAt      DateTime?
  applicationOrder Int?
  
  cancelledAt     DateTime?
  cancelReason    String?
  cancelApproved  Boolean?
  
  companyNote     String?
  
  createdAt       DateTime            @default(now())
  updatedAt       DateTime            @updatedAt
  
  settlement      Settlement?
  
  @@unique([jobPostingId, officerId])
  @@index([jobPostingId])
  @@index([officerId])
  @@index([status])
}

// ============================================
// 7. 평가 (Review)
// ============================================

enum ReviewType {
  COMPANY_TO_OFFICER
  OFFICER_TO_COMPANY
}

model Review {
  id              String        @id @default(cuid())
  type            ReviewType
  
  jobPostingId    String
  
  reviewerCompanyId   String?
  reviewerCompany     Company?       @relation("CompanyReviews", fields: [reviewerCompanyId], references: [id])
  reviewedOfficerId   String?
  reviewedOfficer     SafetyOfficer? @relation("ReviewsForOfficer", fields: [reviewedOfficerId], references: [id])
  
  reviewerOfficerId   String?
  reviewerOfficer     SafetyOfficer? @relation("OfficerReviews", fields: [reviewerOfficerId], references: [id])
  reviewedCompanyId   String?
  reviewedCompany     Company?       @relation("ReviewsForCompany", fields: [reviewedCompanyId], references: [id])
  
  timePunctuality     Int?
  safetyManagement    Int?
  emergencyResponse   Int?
  studentCommunication Int?
  workAttitude        Int?
  
  paymentAccuracy     Int?
  priorNotice         Int?
  onSiteSupport       Int?
  communication       Int?
  reemploymentWilling Int?
  
  averageScore        Float
  comment             String?
  
  isPublished         Boolean         @default(false)
  publishAt           DateTime?
  
  editCount           Int             @default(0)
  editedAt            DateTime?
  
  createdAt           DateTime        @default(now())
  updatedAt           DateTime        @updatedAt
  
  @@index([reviewedOfficerId])
  @@index([reviewedCompanyId])
  @@index([isPublished])
}

// ============================================
// 8. 정산 (Settlement)
// ============================================

enum SettlementStatus {
  PENDING
  COMPANY_PAID
  OFFICER_PAID
  DISPUTED
  CANCELLED
}

model Settlement {
  id              String            @id @default(cuid())
  applicationId   String            @unique
  application     Application       @relation(fields: [applicationId], references: [id])
  
  jobPostingId    String
  jobPosting      JobPosting        @relation(fields: [jobPostingId], references: [id])
  companyId       String
  company         Company           @relation(fields: [companyId], references: [id])
  officerId       String
  officer         SafetyOfficer     @relation(fields: [officerId], references: [id])
  
  amount          Int
  
  status          SettlementStatus  @default(PENDING)
  
  companyPaidAt   DateTime?
  companyDueDate  DateTime
  
  officerPaidAt   DateTime?
  officerDueDate  DateTime?
  
  bankName        String?
  accountNumber   String?
  accountHolder   String?
  
  disputeReason   String?
  disputeResolvedAt DateTime?
  
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  
  @@index([companyId])
  @@index([officerId])
  @@index([status])
}

// ============================================
// 9. 알림 (Notification)
// ============================================

enum NotificationType {
  APPLICATION_RECEIVED
  APPLICATION_SELECTED
  APPLICATION_REJECTED
  APPLICATION_WAITING
  CANCEL_REQUESTED
  CANCEL_APPROVED
  EMERGENCY_CANCEL
  PAYMENT_REMINDER
  PAYMENT_RECEIVED
  PAYMENT_COMPLETED
  REVIEW_REQUEST
  REVIEW_PUBLISHED
  SUBSCRIPTION_EXPIRING
  CERTIFICATE_EXPIRING
  URGENT_RECRUITMENT
  NO_SHOW
}

model Notification {
  id          String            @id @default(cuid())
  userId      String
  type        NotificationType
  
  title       String
  message     String
  link        String?
  
  isRead      Boolean           @default(false)
  readAt      DateTime?
  
  createdAt   DateTime          @default(now())
  
  @@index([userId])
  @@index([isRead])
  @@index([createdAt])
}

// ============================================
// 10. 분쟁/신고 (Dispute)
// ============================================

enum DisputeStatus {
  OPEN
  REVIEWING
  RESOLVED
  DISMISSED
}

enum DisputeType {
  PAYMENT
  NO_SHOW
  FAKE_CERTIFICATE
  MISCONDUCT
  OTHER
}

model Dispute {
  id              String          @id @default(cuid())
  
  type            DisputeType
  status          DisputeStatus   @default(OPEN)
  
  reporterUserId  String
  reporterRole    UserRole
  
  reportedUserId  String
  reportedRole    UserRole
  
  jobPostingId    String?
  applicationId   String?
  settlementId    String?
  
  title           String
  description     String
  evidence        String[]
  
  adminNote       String?
  resolution      String?
  resolvedAt      DateTime?
  resolvedBy      String?
  
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
  
  @@index([status])
  @@index([reporterUserId])
  @@index([reportedUserId])
}