erDiagram
    %% ==========================================
    %% SafeOne (세이프원) - ERD
    %% 안전업체 ↔ 안전요원 매칭 플랫폼
    %% ==========================================

    User ||--o| Company : "1:1 (업체 계정)"
    User ||--o| SafetyOfficer : "1:1 (요원 계정)"
    
    Company ||--o{ Subscription : "구독 이력"
    Company ||--o{ JobPosting : "공고 등록"
    Company ||--o{ Review : "평가 작성/수신"
    Company ||--o{ Settlement : "정산"
    
    SafetyOfficer ||--o{ Application : "지원"
    SafetyOfficer ||--o{ Review : "평가 작성/수신"
    SafetyOfficer ||--o{ Settlement : "정산 수령"
    
    JobPosting ||--o{ Application : "지원 접수"
    JobPosting ||--o{ Settlement : "정산 발생"
    
    Application ||--o| Settlement : "매칭 건별 정산"

    User {
        string id PK
        string email UK
        string password
        enum role "OFFICER | COMPANY | ADMIN"
        enum status "ACTIVE | SUSPENDED | WITHDRAWN"
        string phone UK
        boolean phoneVerified
        datetime createdAt
    }

    Company {
        string id PK
        string userId FK
        string companyName
        string representativeName
        string businessNumber UK "사업자등록번호"
        datetime openDate "개업일"
        enum status "PENDING | VERIFIED | SUSPENDED"
        datetime verifiedAt
    }

    Subscription {
        string id PK
        string companyId FK
        enum tier "BRONZE | SILVER | GOLD"
        enum status "TRIAL | ACTIVE | EXPIRED"
        datetime startDate
        datetime endDate
        int matchCountUsed
        int matchCountLimit
        int amount "결제금액"
    }

    SafetyOfficer {
        string id PK
        string userId FK
        string name
        string[] preferredRegions "활동 선호 지역"
        string certificateNumber "수료번호"
        datetime certificateDate "수료일"
        string certificateImage "수료증 이미지 URL"
        enum status "PENDING | VERIFIED | SUSPENDED"
        int warningCount
        int cancelCount
        int noShowCount
    }

    JobPosting {
        string id PK
        string companyId FK
        string title "행사명"
        datetime eventStartDate
        datetime eventEndDate
        string gatheringPlace "집합장소"
        string destination "목적지"
        int studentCount "학생수"
        int recruitCount "모집인원"
        int dailyWage "일당"
        boolean provideMeals "숙식제공"
        enum status "OPEN | CLOSED | COMPLETED"
        boolean isUrgent "긴급구인"
    }

    Application {
        string id PK
        string jobPostingId FK
        string officerId FK
        enum status "APPLIED | SELECTED | WAITING | REJECTED | CANCELLED"
        datetime appliedAt
        int applicationOrder "지원순서"
        datetime selectedAt
        string cancelReason
    }

    Review {
        string id PK
        enum type "COMPANY_TO_OFFICER | OFFICER_TO_COMPANY"
        string jobPostingId
        int timePunctuality "시간준수 1-5"
        int safetyManagement "안전관리 1-5"
        int emergencyResponse "돌발대처 1-5"
        int paymentAccuracy "정산정확성 1-5"
        float averageScore
        string comment
        boolean isPublished
        datetime publishAt "14일후 공개"
    }

    Settlement {
        string id PK
        string applicationId FK
        string companyId FK
        string officerId FK
        int amount "정산금액"
        enum status "PENDING | COMPANY_PAID | OFFICER_PAID | DISPUTED"
        datetime companyPaidAt
        datetime officerPaidAt
        string bankName
        string accountNumber
    }

    Notification {
        string id PK
        string userId
        enum type "다양한 알림 유형"
        string title
        string message
        boolean isRead
    }

    Dispute {
        string id PK
        enum type "PAYMENT | NO_SHOW | FAKE_CERTIFICATE"
        enum status "OPEN | REVIEWING | RESOLVED"
        string reporterUserId
        string reportedUserId
        string description
        string resolution
    }
